--- a/PStorebyWhiteLotus.html
+++ b/PStorebyWhiteLotus.html
@@ -1544,7 +1544,7 @@ sections ending for football.
               <li><a href="./PStorebyWhiteLotus/Profile.html"title="Publick profiles">Profile</a></li>
               <li><a href="./PStorebyWhiteLotus/User_Login.html"title="Monitor your performance, open your pannel">My account</a></li>
               <li><a href="./PStorebyWhiteLotus.html"title="prefrences inventory, products">Product/Prefrences</a></li>
-              <li><a href="#"onclick="notvalid();">Purchase</a></li>
+              <li><a href="./PStorebyWhiteLotus/PStore.html"onclick="notvalid();">Purchase</a></li>
             </ul>
             <ul class="box">
               <li class="link_name">Offers</li>
